# akai

./: meson.build
src/: app.cpp  app.hpp  main.cpp
src/ui/: box.cpp  box.hpp  widget.hpp
